# sentinel-core

./: README.md  index.html  inference.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  supabaseClient.ts  tsconfig.node.json  vite.config.ts
server/: app.py  database.py  models.py
src/: App.tsx  main.tsx
