[tool.poetry]
name = "sentinel-core"
version = "0.1.0"
description = "Autonomous Cloud-Native SOC Analyst"
authors = ["Bavanish"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
pyjwt = "^2.8.0"
python-multipart = "^0.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
